# aoc-2025

./: .gitignore  README.md  aoc-2025.opam  dune-project
day1/: day1.ml
day2/: day2.ml
lib/: dune
lib/solutions/day1/: day1.ml
lib/solutions/day2/: day2.ml
lib/solutions/day3/: day3.ml
lib/solutions/day4/: day4.ml
lib/solutions/day5/: day5.ml
lib/solutions/day6/: day6.ml
lib/solutions/day7/: day7.ml
lib/utils/: utils.ml  utils.mli
test/: dune
