(lang dune 3.20)

(name aoc-2025)

(generate_opam_files true)

(source
 (github SuperChamp234/aoc-2025))

(authors "Zain Siddavatam <dev@zainsv.me>")

(maintainers "Zain Siddavatam <dev@zainsv.me>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc-2025)
 (synopsis "Zain's AOC 2025 Solutions")
 (description "OCaml solutions for Advent of Code 2025")
 (depends ocaml)
 (tags
  ("advent-of-code"
   "aoc"
   "ocaml"
   "fun"
   "puzzles")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
